PORT-2922: Add tooltip and warning message for Licensee

--- a/src/pages/avails/ingest-panel/components/upload-ingest/InputForm/InputForm.scss
+++ b/src/pages/avails/ingest-panel/components/upload-ingest/InputForm/InputForm.scss
@@ -1,4 +1,5 @@
 @import '../../../../../../styles/config';
+@import '../../../../../../styles/atlaskit/colors';
 
 .manual-ingest-config {
   display: flex;
@@ -62,5 +63,10 @@
   }
   &__licensee {
       padding-bottom: 20px;
+  }
+  &__sub-text {
+      font-size: 12px;
+      padding-top: 5px;
+      color: map-get($neutrals, N90)
   }
 }
