--- a/src/styles/legacy/global.scss
+++ b/src/styles/legacy/global.scss
@@ -1,136 +1,150 @@
-.editable-container input, .nx-stylish input, .nx-stylish select {
-  background-color: rgba(255,255,255,0.4);
-  border-radius: 28px;
-  border: 1px solid #ccc;
-  white-space: pre;
+.editable-container input,
+.nx-stylish input,
+.nx-stylish select {
+    background-color: rgba(255, 255, 255, 0.4);
+    border-radius: 28px;
+    border: 1px solid #ccc;
+    white-space: pre;
 }
 
 .nx-stylish option {
-  background-color: rgba(255,255,255,0.4);
-  border-radius: 28px;
-  border: 1px solid #ccc;
+    background-color: rgba(255, 255, 255, 0.4);
+    border-radius: 28px;
+    border: 1px solid #ccc;
 }
 
 .nx-stylish label {
-  font-size: small;
-  padding-left: 10px;
-  margin: 0;
+    font-size: small;
+    padding-left: 10px;
+    margin: 0;
 }
 
-.react-datepicker-wrapper, .react-datepicker__input-container {
-  width: 100%;
+.react-datepicker-wrapper,
+.react-datepicker__input-container {
+    width: 100%;
 }
 
 .react-datepicker__input-container input {
-  display: block;
-  width: 100%;
-  height: calc(2.25rem + 2px);
-  padding: 0.375rem 0.75rem;
-  line-height: 1.5;
-  color: #495057;
-  background-color: #fff;
-  background-clip: padding-box;
-  transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
-  background-color: rgba(255,255,255,0.4);
-  border-radius: 28px;
-  border: 1px solid #ccc;
+    display: block;
+    width: 100%;
+    height: calc(2.25rem + 2px);
+    padding: 0.375rem 0.75rem;
+    line-height: 1.5;
+    color: #495057;
+    background-color: #fff;
+    background-clip: padding-box;
+    transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+    background-color: rgba(255, 255, 255, 0.4);
+    border-radius: 28px;
+    border: 1px solid #ccc;
 }
 
 .editable-disabled a,
 .editable-disabled a:hover {
-  color: black;
-  cursor: text;
+    color: black;
+    cursor: text;
 }
 
 .empty .editable-container a {
-  color: gray;
+    color: gray;
 }
 
-.editable-container, .editable-container .editable-btn {
-  display: flex;
+.editable-container,
+.editable-container .editable-btn {
+    display: flex;
 }
 
-.editable-container a{
-  width: 100%;
-  white-space: pre;
+.editable-container a {
+    width: 100%;
+    white-space: pre;
 }
 
 .editable-container .btn {
-  margin-left: 8px;
-  width: 40px;
-  height: 40px;
+    margin-left: 8px;
+    width: 40px;
+    height: 40px;
 }
 
 .editable-container .help-block {
-  color: red;
+    color: red;
 }
 
 .pointer {
-  cursor: pointer;
+    cursor: pointer;
 }
 
-::-webkit-input-placeholder { /* Chrome/Opera/Safari */
-  color: rgba(40,40,40,0.3);
+::-webkit-input-placeholder {
+    /* Chrome/Opera/Safari */
+    color: rgba(40, 40, 40, 0.3);
 }
-::-moz-placeholder { /* Firefox 19+ */
-  color: rgba(40,40,40,0.3);
+::-moz-placeholder {
+    /* Firefox 19+ */
+    color: rgba(40, 40, 40, 0.3);
 }
-:-ms-input-placeholder { /* IE 10+ */
-  color: rgba(40,40,40,0.3);
+:-ms-input-placeholder {
+    /* IE 10+ */
+    color: rgba(40, 40, 40, 0.3);
 }
-:-moz-placeholder { /* Firefox 18- */
-  color: rgba(40,40,40,0.3);
+:-moz-placeholder {
+    /* Firefox 18- */
+    color: rgba(40, 40, 40, 0.3);
 }
 
 //PORT-1024 fix safari text colors for disabled text fields
 input[disabled] {
-  -webkit-text-fill-color:#A5ADBA; /* Override iOS / Android font color change */
-  opacity: 1; /* Override iOS opacity change affecting text & background color */
+    -webkit-text-fill-color: #a5adba; /* Override iOS / Android font color change */
+    opacity: 1; /* Override iOS opacity change affecting text & background color */
 }
 
-.css-vj8t7z, .css-2o5izw, .css-1r4vtzz, .css-48ayfv {
-  border-radius: 24px!important;
-  background-color: rgba(255,255,255,0.4)!important;
+.css-vj8t7z,
+.css-2o5izw,
+.css-1r4vtzz,
+.css-48ayfv {
+    border-radius: 24px !important;
+    background-color: rgba(255, 255, 255, 0.4) !important;
 }
 
-.css-1r4vtzz, .css-48ayfv {
-  width: 100% !important;
+.css-1r4vtzz,
+.css-48ayfv {
+    width: 100% !important;
 }
 
 .css-15k3avv {
-  position: absolute;
+    position: absolute;
 }
 
 .breadcrumb {
-  background: white;
-  padding-bottom: 8px;
-  margin-bottom: 0;
+    background: white;
+    padding-bottom: 8px;
+    margin-bottom: 0;
 }
 
 .breadcrumb-item + .breadcrumb-item::before {
-  content: ">";
+    content: '>';
 }
 
 .error-link {
-  color: #CF2A27;
+    color: #cf2a27;
 }
 
 .error-link:hover {
-  color: #F63;
+    color: #f63;
 }
 
 // .ag-cell-wrapper > .ag-selection-checkbox {
-  // margin-left: 10px;
+// margin-left: 10px;
 // }
 
 .ag-cell-wrapper {
-  justify-content: center;
+    justify-content: center;
 }
 
-.ag-cell.ag-cell-value {
-  white-space: pre;
+.ag-row .ag-cell.ag-cell-value {
+    white-space: pre;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 .audio-language-form > div {
-   overflow: visible;
+    overflow: visible;
 }
