--- a/src/styles/atlaskit/reset.scss
+++ b/src/styles/atlaskit/reset.scss
@@ -38,11 +38,15 @@ html {
     width: 100%;
 }
 
+html {
+    font-size: #{$base-font-size}px;
+}
+
 body {
     background-color: map-get($element-colors, backgorund);
     color: map-get($typographic-colors, body-text);
     font-family: $font-family;
-    font-size: #{$base-font-size}px;
+    font-size: 100%;
     font-style: normal;
     font-weight: 400;
     line-height: 1.42857142857143; // 20px
