avails ingest styling touchups

--- a/src/pages/avails/ingest-panel/components/bundle-title/BundleTitle.scss
+++ b/src/pages/avails/ingest-panel/components/bundle-title/BundleTitle.scss
@@ -1,27 +1,35 @@
 .nexus-c-bundle-title {
-  font-size: 14px;
-  width: 300px;
-  display: inline-flex;
-  justify-content: space-between;
-  align-items: center;
+    font-size: 14px;
+    display: inline-flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
 
-  svg {
-    width: 18px;
-    height: 18px;
-    fill: #A5ADBA;
-  }
-}
+    svg {
+        width: 18px;
+        height: 18px;
+        fill: #a5adba;
+    }
 
-.nexus-c-bundle-title__details {
-  display: flex;
-  align-items: center;
-}
+    &__details {
+        width: 100%;
+        display: flex;
+        align-items: center;
+    }
 
-.nexus-c-bundle-title__folder {
-  margin-right: 12px;
-}
+    &__folder {
+        margin-right: 12px;
+    }
 
-.nexus-c-bundle-title__licensor, .nexus-c-bundle-title__separator {
-  font-weight: bold;
-  margin-right: 12px;
+    &__licensor {
+        font-weight: bold;
+        margin-right: 12px;
+    }
+
+    &__licensor-and-count {
+        width: 100%;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
 }
