--- a/src/pages/avails/ingest-panel/components/ingest/Ingest.scss
+++ b/src/pages/avails/ingest-panel/components/ingest/Ingest.scss
@@ -1,66 +1,72 @@
+@import '../../../../../styles/atlaskit/reset';
+@import '../../../../../styles/atlaskit/theme';
+@import '../../../../../styles/atlaskit/mixins';
+
 .nexus-c-avail-ingest {
-  width: 100%;
-  padding: 12px;
-  border-bottom: 1px solid #DCDCDC;
-  background: #FFFFFF;
+    width: 100%;
+    padding: 12px;
+    border-bottom: 1px solid #dcdcdc;
+    background: #ffffff;
 
-  &--is-in-bundle {
-    padding-left: 30px;
-  }
+    &--is-in-bundle {
+        border-left: solid map-get($light-neutral-colors, light-neutral-1);
+        @include addSpacing(border-left-width, 2);
+        @include addSpacing(padding-left, 4);
+        @include addSpacing(margin-left, 0.5);
+    }
 
-  &:hover {
-    background: #FAFAFA;
-  }
+    &:hover {
+        background: #fafafa;
+    }
 
-  &--is-selected {
-      background: #E0ECF7;
+    &--is-selected {
+        background: #e0ecf7;
 
-      &:hover {
-          background: #E0ECF7;
-      }
-  }
+        &:hover {
+            background: #e0ecf7;
+        }
+    }
 
-  .ingest-panel__list & {
-      cursor: pointer;
-  }
+    .ingest-panel__list & {
+        cursor: pointer;
+    }
 }
 
 .nexus-c-avail-ingest__details {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
 }
 
 .nexus-c-avail-ingest__chevron {
-    & svg {
+    svg {
         width: 15px;
         height: 15px;
-        fill: #A5ADBA;
+        fill: #a5adba;
         cursor: pointer;
     }
 
     &--is-opened {
-        & svg {
+        svg {
             transform: rotate(90deg);
         }
     }
 }
 
 .nexus-c-avail-ingest .ingest-report {
-  width: 100%;
-  margin-top: 15px;
+    width: 100%;
+    margin-top: 15px;
 
-  &__fields {
-    justify-content: space-between;
-  }
+    &__fields {
+        justify-content: space-between;
+    }
 }
 
 .nexus-c-avail-ingest__status {
-  width: 100%;
+    width: 100%;
 
-  &--is-not-expandable {
-    margin-left: 15px;
-  }
-
+    &--is-not-expandable {
+        margin-left: 15px;
+    }
 }
