--- a/src/pages/avails/ingest-panel/components/ingest-status/IngestStatus.scss
+++ b/src/pages/avails/ingest-panel/components/ingest-status/IngestStatus.scss
@@ -1,14 +1,25 @@
+@import '../../../../../styles/atlaskit/reset';
+@import '../../../../../styles/atlaskit/theme';
+@import '../../../../../styles/atlaskit/mixins';
+
 .ingest-status {
-  width: 100%;
-  display: inline-flex;
-  justify-content: space-between;
-  align-items: center;
-  padding-left: 15px;
-  &__date {
-    font-size: 11px;
-    color: #737E91;
-  }
-  &__type {
-    margin-left: 8px;
-  }
+    width: 100%;
+    display: inline-flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-left: 15px;
+
+    &__date-and-type {
+        display: flex;
+        align-items: center;
+    }
+
+    &__date {
+        font-size: 11px;
+        color: #737e91;
+    }
+
+    &__type {
+        margin-left: 8px;
+    }
 }
