fulfillmentOrderPanel and servicingOrderItem styling touch ups

--- a/src/pages/servicing-orders/servicing-order/components/fulfillment-order-panel/FulfillmentOrderPanel.scss
+++ b/src/pages/servicing-orders/servicing-order/components/fulfillment-order-panel/FulfillmentOrderPanel.scss
@@ -3,7 +3,7 @@
 @import '../../../../../styles/atlaskit/mixins';
 
 .nexus-c-fulfillment-order-panel {
-    // width: auto;
+    cursor: pointer;
     @include padding(3);
     border-bottom: 1px solid map-get($light-neutral-colors, light-neutral-2);
     background: map-get($primary-colors, white);
