--- a/src/pages/servicing-orders/servicing-order/components/fulfillment-order-panel/FulfillmentOrderPanel.scss
+++ b/src/pages/servicing-orders/servicing-order/components/fulfillment-order-panel/FulfillmentOrderPanel.scss
@@ -11,10 +11,10 @@
     position: relative;
 
     &--is-selected {
-        background: #e0ecf7;
+        background: map-get($blues, B50);
 
         &:hover {
-            background: #e0ecf7;
+            background: map-get($blues, B50);
         }
     }
 
