--- a/src/pages/avails/ingest-panel/components/ingest-filters/IngestFilters.scss
+++ b/src/pages/avails/ingest-panel/components/ingest-filters/IngestFilters.scss
@@ -1,14 +1,13 @@
-@import '../../../../../styles/atlaskit/reset';
 @import '../../../../../styles/atlaskit/theme';
 @import '../../../../../styles/atlaskit/mixins';
 
 .ingest-filters {
-    font-size: 16px;
     color: #42526e;
-    @include padding(6);
+    @include padding(0, 6, 6);
     border-bottom: 1px solid map-get($light-neutral-colors, light-neutral-1);
+
     &__section {
-        color: #a5adba;
+        color: map-get($mid-neutral-colors, mid-neutral-7);
         display: flex;
         flex-direction: column;
 
