--- a/src/pages/avails/rights-repository/components/ingest/Ingest.scss
+++ b/src/pages/avails/rights-repository/components/ingest/Ingest.scss
@@ -1,6 +1,5 @@
-@import '../../../../../styles/atlaskit/reset';
 @import '../../../../../styles/atlaskit/theme';
-@import '../../../../../styles/atlaskit/colors';
+@import '../../../../../styles/atlaskit/mixins';
 
 .nexus-c-avails-ingest {
     position: relative;
