--- a/src/pages/avails/rights-repository/components/status-check/StatusCheck.scss
+++ b/src/pages/avails/rights-repository/components/status-check/StatusCheck.scss
@@ -1,3 +1,5 @@
+@import '../../../../../styles/config';
+
 .nexus-c-status-check {
     height: 100%;
 }
@@ -17,4 +19,8 @@
     justify-content: center;
     align-items: center;
     margin-left: auto;
+}
+
+.nexus-c-status-check__table--invalid {
+    color: map-get($colors, nexus-warning);
 }
