--- a/src/pages/avails/bulk-matching/components/bulk-match-review/BulkMatchingReview.scss
+++ b/src/pages/avails/bulk-matching/components/bulk-match-review/BulkMatchingReview.scss
@@ -1,4 +1,4 @@
-@import '../../../../styles/config';
+@import '../../../../../styles/config';
 
 .nexus-c-bulk-matching-review {
     display: flex;
