--- a/src/pages/servicing-orders/servicing-order/components/fulfillment-order-panel/FulfillmentOrderPanel.scss
+++ b/src/pages/servicing-orders/servicing-order/components/fulfillment-order-panel/FulfillmentOrderPanel.scss
@@ -62,11 +62,11 @@
     }
 
     &__description-and-status {
+        @include addSpacing(padding-left, 14.5);
         width: 100%;
         display: inline-flex;
-        justify-content: flex-end;
+        justify-content: space-between;
         align-items: center;
-        padding-left: 30px;
     }
 
     &__description {
