--- a/src/pages/servicing-orders/servicing-order/components/partner-request/PartnerRequest.scss
+++ b/src/pages/servicing-orders/servicing-order/components/partner-request/PartnerRequest.scss
@@ -1,4 +1,5 @@
 @import '../../../../../styles/mixins.scss';
+@import '../../../../../styles/atlaskit/mixins';
 
 .nexus-c-partner-request {
     padding-left: 1rem;
@@ -16,7 +17,7 @@
 
     &__table-wrapper {
         margin-top: 1rem;
-        height: 80%;
+        height: calc(100vh - 215px);
 
         /* the nexus grid container div */
         & > div {
@@ -36,5 +37,11 @@
         padding: 0 0.75rem 0.75rem 0;
         width: 100%;
         height: 100%;
+    }
+
+    &__json {
+        @include addSpacing(margin-left, 4);
+        @include addSpacing(margin-right, 4);
+        @include addSpacing(margin-bottom, 4);
     }
 }
