--- a/src/pages/avails/bulk-delete/BulkDelete.scss
+++ b/src/pages/avails/bulk-delete/BulkDelete.scss
@@ -9,6 +9,11 @@
     @include margin(0, 0, 5, 0);
 }
 
+.nexus-c-bulk-delete__container {
+    min-height: 220px;
+    overflow: auto;
+}
+
 .nexus-c-bulk-delete__table-header {
     @include margin(0, 0, 5, 0);
 }
