--- a/src/pages/avails/ingest-panel/components/upload-ingest/InputForm/InputForm.scss
+++ b/src/pages/avails/ingest-panel/components/upload-ingest/InputForm/InputForm.scss
@@ -1,72 +1,94 @@
 @import '../../../../../../styles/config';
 @import '../../../../../../styles/atlaskit/colors';
+@import '../../../../../../styles/atlaskit/mixins';
 
 .manual-ingest-config {
-  display: flex;
-  flex-direction: column;
-  min-height: 250px;
-  overflow: hidden;
-  font-size: 14px;
-  label[data-testid=disabled--radio-label] {
-    color: map-get($colors, nexus-light-grey);
-  }
-  &__grid {
-    display: grid;
-    align-items: center;
-    grid-template-columns: 1fr 1fr;
-    grid-column-gap: 25px;
-    margin-bottom: 30px;
-    &:first-of-type {
-      grid-template-columns: 2fr 1fr;
-      margin-bottom: 20px;
-    }
-    &:last-of-type {
-      margin-bottom: 10px;
-      button {
-        display: flex;
-        justify-content: center;
-        svg {
-          stroke: #FFFFFF;
-        }
-        &.btn-primary {
-          background: #0065FF;
-          color: #FFFFFF!important;
-        }
-      }
-    }
-    &--browse {
-      justify-self: end;
-      box-shadow: none!important;
-    }
-  }
-  &__internal {
-    display: flex;
-    align-items: center;
-    margin-bottom: 20px;
-    margin-left: -5px;
-    font-size: 14px;
-    label {
-      margin-bottom: 0;
-    }
-  }
-  &--file-name {
     display: flex;
     flex-direction: column;
-    label {
-      margin-bottom: 0;
-      font-size: 12px;
+    min-height: 250px;
+    overflow: hidden;
+    font-size: 14px;
+    label[data-testid='disabled--radio-label'] {
+        color: map-get($colors, nexus-light-grey);
     }
-    span {
-      word-break: break-all;
-      font-size: 14px;
+    &__grid {
+        display: grid;
+        align-items: center;
+        grid-template-columns: 1fr 1fr;
+        grid-column-gap: 25px;
+        margin-bottom: 30px;
+        &:first-of-type {
+            grid-template-columns: 2fr 1fr;
+            margin-bottom: 20px;
+        }
+        &:last-of-type {
+            margin-bottom: 10px;
+            button {
+                display: flex;
+                justify-content: center;
+                svg {
+                    stroke: #ffffff;
+                }
+                &.btn-primary {
+                    background: #0065ff;
+                    color: #ffffff !important;
+                }
+            }
+        }
+        &--browse {
+            justify-self: end;
+            box-shadow: none !important;
+        }
     }
-  }
-  &__licensee {
-      padding-bottom: 20px;
-  }
-  &__sub-text {
-      font-size: 12px;
-      padding-top: 5px;
-      color: map-get($neutrals, N90)
-  }
+    &__internal {
+        display: flex;
+        align-items: center;
+        margin-bottom: 20px;
+        margin-left: -5px;
+        font-size: 14px;
+        label {
+            margin-bottom: 0;
+        }
+    }
+    &--file-name {
+        display: flex;
+        flex-direction: column;
+        label {
+            margin-bottom: 0;
+            font-size: 12px;
+        }
+        span {
+            word-break: break-all;
+            font-size: 14px;
+        }
+    }
+    &__licensee {
+        padding-bottom: 20px;
+    }
+    &__sub-text {
+        font-size: 12px;
+        padding-top: 5px;
+        color: map-get($neutrals, N90);
+    }
+}
+
+.manual-ingest-config__catalog {
+    @include margin(0, 0, 10, 0);
+}
+
+.manual-ingest-config__catalog-options {
+    display: flex;
+    flex-direction: row;
+    @include margin(5, 0, 0, 0);
+}
+
+.manual-ingest-config__catalog-select {
+    width: 50%;
+}
+
+.manual-ingest-config__catalog-checkbox {
+    width: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
 }
